--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-icons": "^4.3.1",
+    "react-ionicons": "^4.2.0",
+    "react-scripts": "^4.0.3",
+    "react-svg-path": "^1.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
